package edu.hitsz.rank;

public enum GameDifficulty {
    EASY,
    MEDIUM,
    HARD
}
